--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -175,7 +175,7 @@
 /* IE7 */
 /* used for styling post content in themes */
 body {
-  font-family: 'Hanna', helvetica, sans-serif;
+  font-family: 'Hanna', serif;
 }
 a {
   color: #2eb18d;
