--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -202,7 +202,7 @@ p {
 .navbar-inner {
   padding-top: 15px;
   padding-bottom: 15px;
-  background-color: #2eb18d;
+  background-color: #3b5998;
   background-image: none;
   background-repeat: no-repeat;
   filter: none;
