--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,10 +180,10 @@ body {
   font-family: 'Nanum Gothic', serif;
 }
 a {
-  color: #2eb18d;
+  color: #293e6a;
 }
 a:visited {
-  color: #2eb18d;
+  color: #293e6a;
 }
 a:active {
   color: #d84c30;
