changed author color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,7 @@ h6 {
   display: block;
 }
 .post-author p span.post-date {
-  color: #b6a754;
+  color: #77ba9b;
   font-family: 'Nanum Gothic', serif;
   font-weight: 300;
   font-size: 0.85rem;
@@ -482,7 +482,7 @@ h6 {
   font-size: 0.85rem;
   font-family: 'Nanum Gothic', serif;
   font-weight: 400;
-  color: #b6a754;
+  color: #77ba9b;
 }
 .bio {
   position: relative;
