changed post date color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -473,7 +473,7 @@ h6 {
   display: block;
 }
 .post-author p span.post-date {
-  color: #77ba9b;
+  color: #293e6a;
   font-family: 'Nanum Gothic', serif;
   font-weight: 300;
   font-size: 0.85rem;
