--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,10 +180,10 @@ body {
   font-family: 'Nanum Gothic', serif;
 }
 a {
-  color: #517398;
+  color: #ff606e;
 }
 a:visited {
-  color: #517398;
+  color: #ff606e;
 }
 a:active {
   color: #d84c30;
