changed brand hover color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -223,7 +223,7 @@ a.brand:visited {
 a.brand:hover,
 a.brand:link:hover,
 a.brand:visited:hover {
-  color: #333;
+  color: #ff606e;
 }
 .nav li a,
 .nav li a:link,
