--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -482,7 +482,7 @@ h6 {
   font-size: 0.85rem;
   font-family: 'Nanum Gothic', serif;
   font-weight: 400;
-  color: #77ba9b;
+  color: #517398;
 }
 .bio {
   position: relative;
