--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -247,7 +247,7 @@ a.brand:visited:hover {
 .nav li:hover a:link,
 .nav li:hover a:visited,
 .nav li.active a:link {
-  color: #333;
+  color: #ff606e;
 }
 .nav li a {
   padding-right: 0 !important;
