--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -401,6 +401,7 @@ h6 {
   font-size: 28px;
   margin-top: 15px;
   font-weight: 300;
+  color: #ff606e;
 }
 .post h2 {
   font-size: 24px;
@@ -432,6 +433,9 @@ h6 {
 .post p {
   font-size: 14px;
   line-height: 24px;
+}
+.post p span.post-author-name {
+  color: #517398;
 }
 .post ul,
 .post ol {
